Testing With Fishing Sim Code

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         </div>
         <div class="game-area">
             <h4>game area</h4>
+            <h3 id="fish" class="hidden">Fish: 0</h3>
+            <button id="fishButton"><img src="https://icons.veryicon.com/png/o/food--drinks/the-first-business-material-design/fish-26.png" height="60" width="60"><br>Catch Fish</button>
                 <div>
                     <fieldset class="data-area">
                         <fieldset class="data-set">
